syntax = "proto3";

option go_package = ".;proto";

import "google/protobuf/empty.proto";

service User {
    // 用户列表
    rpc GetUserList (PageInfo) returns (UserListResponse);
    // 通过mobile查询用户
    rpc GetUserByMobile (MobileRequest) returns (UserInfoResponse);
    // 通过id查询用户
    rpc GetUserById (IdRequest) returns (UserInfoResponse);
    // 添加用户
    rpc CreateUser (CreateUserRequest) returns (UserInfoResponse);
    // 更新用户
    rpc UpdateUser (UpdateUserInfoRequest) returns (google.protobuf.Empty);
    // 检查用户密码
    rpc CheckPassword(CheckPasswordRequest) returns (CheckResponse);
}

message CheckPasswordRequest {
    string password = 1;
    string encryptedPassword = 2;
}

message CheckResponse {
    bool success = 1;
}

message PageInfo {
    uint32 page = 1;
    uint32 size = 2;
}

message MobileRequest {
    string mobile = 1;
}

message IdRequest {
    int32 id = 1;
}

// 创建用户
message CreateUserRequest {
    string nickname = 1;
    string password = 2;
    string mobile = 3;
}

// 更新用户
message UpdateUserInfoRequest {
    int32 id = 1;
    string nick = 2;
    string gender = 3;
    uint64 birthday = 4;
}


// 用户详情
message UserInfoResponse {
    int32 id = 1;
    string password = 2;
    string mobile = 3;
    string nickname = 4;
    uint64 birthday = 5;
    string gender = 6;
    int32 role = 7;
}

// 用户列表
message UserListResponse {
    int32 total = 1;
    repeated UserInfoResponse data = 2;
}